fix trades routes
